Fix logo position and menu on mobile

--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -15,7 +15,6 @@
   }
 
   @include r(767) {
-    text-align: right;
     height: 100vh;
     background-color: #fff;
     overflow: scroll;
